--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,13 @@
 
 /* html {
     box-sizing: border-box;
-}
+}*/
 
 *,
-*:before,
-*:after {
-    box-sizing: inherit;
-} */
-
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 /* Root Variables */
 :root {
@@ -21,13 +20,14 @@
     --colour-two: #CBDF1E;
     --colour-three: #7B4B9D;
     --colour-four: #1D252C;
+    --colour-five:#6885D1;
     --background: #fafafa;
     --ff-headings: "Mitr", sans-serif;
     --ff-sub-headings: "Josefin Sans", sans-serif;
     --ff-general: "Afacad", sans-serif;
     --font-size-general: 1rem;
     --font-weight-general: 400;
-    /* --mw: 1200px; */
+    --mw: 1200px;
 }
 
 
@@ -40,7 +40,7 @@ body {
 }
 
 .main-wraper {
-    max-width: 1200px;
+    max-width:var(--mw);
 }
 
 h1 {
@@ -63,11 +63,52 @@ a {
     font-family: var(--ff-general);
 }
 
-a {}
 
 .txt {
     text-transform: uppercase;
 }
+
+
+.navbar-toggler {
+    --bs-navbar-toggler-border-color: var(--background);
+}
+
+.navbar-toggler-icon {
+   
+}
+
+/* Button color and states */
+.btn-primary {
+    --bs-btn-bg: var(--colour-one);
+    --bs-btn-border-color:var(--colour-one);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--colour-three);
+    --bs-btn-hover-border-color: var(--colour-three);
+    --bs-btn-focus-shadow-rgb: 174, 101, 226;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #803bb1;
+    --bs-btn-active-border-color: #7838a6;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--colour-one);;
+    --bs-btn-disabled-border-color: var(--colour-one);;
+  }
+
+  .btn-light {
+    --bs-btn-bg: var(--colour-two);
+    --bs-btn-border-color:var(--colour-two);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--colour-five);
+    --bs-btn-hover-border-color: var(--colour-five);
+    --bs-btn-focus-shadow-rgb: 174, 101, 226;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #6384d5;
+    --bs-btn-active-border-color: #6384d5;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--colour-one);;
+    --bs-btn-disabled-border-color: var(--colour-one);;
+  }
 
 /* ==================================================
                     DEFAULT VALUES - MOBILE                   
@@ -100,6 +141,7 @@ a {}
             rgba(80, 58, 105, 1) 55%,
             rgba(123, 75, 157, 1) 95%);
 }
+
 
 /* HERO SECTION  */
 #hero {
@@ -136,7 +178,7 @@ a {}
     border-bottom-right-radius: 80px;
 }
 
-/*  */
+/* Tapes Decoration */
 
 .position-tape {
     position: relative;
@@ -145,7 +187,6 @@ a {}
 .tape {
     width: 5rem;
     position: absolute;
-    /* transform: translate(-60px, -20px) rotate(30deg); */
     transform: translate(-160px, -20px);
 }
 
@@ -155,8 +196,6 @@ a {}
 
 .tape-two {
     width: 5rem;
-    /* position: absolute; */
-    /* transform: translate(-450px, 350px) rotate(30deg); */
     transform: translate(-10px, -20px);
 }
 
@@ -167,11 +206,37 @@ a {}
 
 }
 
-.serv-img{
-    height: 25vh;
-    width: fit-content;
+/* FEATURED ARTISTS */
+.categories img{
+    width: 80%;
 }
 
-.service {
-    height: 400px;
+.left{
+    transform: rotate(-20deg);
+}
+
+.right{
+    transform: rotate(20deg);
+}
+
+.feature-image {
+    object-fit: cover;
+    max-height: 35vh;
+    max-width: 35vh;
+}
+
+
+.tape-crafter {
+    width: 5rem;
+    position: absolute;
+    transform: translate(-50px, -90px);
+}
+
+.gradient-footer {
+    background: rgb(29, 37, 44);
+    background: linear-gradient(180deg,
+            rgba(29, 37, 44, 1) 0%,
+            rgba(55, 48, 75, 1) 35%,
+            rgba(80, 58, 105, 1) 55%,
+            rgba(123, 75, 157, 1) 95%);
 }
