--- a/css/style.css
+++ b/css/style.css
@@ -68,14 +68,28 @@ a {
     text-transform: uppercase;
 }
 
+a{
+    cursor: pointer;
+}
+/* anchor links */
+.nav-link a{
+  /* --bs-navbar-color: rgba(255, 255, 255, 0.55); */
+  --bs-navbar-hover-color: #A04ADD;
+  --bs-navbar-disabled-color: rgba(255, 255, 255, 0.25);
+  --bs-navbar-active-color: var(--colour-one);
+  /* --bs-navbar-brand-color: #fff; */
+  --bs-navbar-brand-hover-color: #fff;
+  /* --bs-navbar-toggler-border-color: rgba(255, 255, 255, 0.1); */
+  /* --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); */
+}
 
 .navbar-toggler {
     --bs-navbar-toggler-border-color: var(--background);
 }
-
 .navbar-toggler-icon {
-   
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
 
 /* Button color and states */
 .btn-primary {
@@ -239,4 +253,14 @@ a {
             rgba(55, 48, 75, 1) 35%,
             rgba(80, 58, 105, 1) 55%,
             rgba(123, 75, 157, 1) 95%);
+}
+
+
+/************* OUR STUDIO *********************/
+
+/* MISSION */
+.mission-img{
+    object-fit: cover;
+    height: 35vh;
+    width: 35vh;
 }
